adjusted charts again and broke up anchor tags so that they wouldn't force scroll

--- a/index.html
+++ b/index.html
@@ -237,11 +237,19 @@
             </p>
  
           </div>
-          <div class="col-lg-6 mx-auto my-2">
-            <div class="chart">
+           
+          <div class="chartCard col-lg-6 mx-auto  ">
+            <div class="chartBox">
               <canvas id="myChart"></canvas>
             </div>
           </div>
+
+
+          <!-- <div class="col-lg-6 mx-auto my-2">
+            <div class="chart">
+              <canvas id="myChart"></canvas>
+            </div>
+          </div> -->
           <div>           <p class="mx-auto">
               The biological and behavioral characteristics of feral swine—their adaptability, nocturnal habits, and responses to hunting pressure—create inherent challenges in population estimation. However, these natural difficulties are compounded by institutional and methodological fragmentation. When Georgia reports a population range of "200,000 to 600,000" while neighboring Florida simply states "over one-half million," the utility of such figures for cross-state management planning is severely limited. These are not merely different numerical expressions but distinct systems of knowledge production whose outputs cannot be meaningfully integrated because they rest on different implicit assumptions about what constitutes valid evidence.[8,9]
 
@@ -278,7 +286,7 @@
             expert verification.
           </p> -->
         </div>
-                <div class="pb-2 mx-auto h2">Recommendations</div>
+        <div class="pb-2 mx-auto h2">Recommendations</div>
         <div>
           <p class="pb-2 mx-auto">
             Future research should focus not merely on standardizing technical protocols but on fostering what Collins terms "interactional expertise"—the capacity to move productively between different knowledge communities without requiring their complete integration. The University of Georgia's EDDMapS exemplifies this approach, creating mechanisms for knowledge exchange while preserving the distinct contributions of different evidential cultures.
@@ -287,9 +295,15 @@
             Universities are uniquely positioned to function as epistemic mediators in this process, possessing both the scientific authority to validate methodological approaches and the institutional capacity to engage diverse stakeholder communities. By creating platforms for interdisciplinary collaboration that explicitly acknowledge rather than suppress evidential differences, academic institutions could foster a more robust collective understanding of complex ecological phenomena like feral swine populations—simultaneously accommodating the scientific rigor privileged by academic research, the geographical coverage enabled by citizen observation, and the practical knowledge embedded in hunting and agricultural communities.
           </p>
 
-        <div class="px-2 mx-auto">
+        <!-- <div class="px-2 mx-auto">
           <canvas id="myChart2"></canvas>
-        </div>
+        </div> -->
+
+          <div class="chartCard2">
+            <div class="chartBox2">
+              <canvas id="myChart2"></canvas>
+            </div>
+          </div>
 
         <div class="album py-5">
           <div class="container px-5">
@@ -300,55 +314,88 @@
                   1. Collins, H. M. (1998). The Meaning of Data: Open and Closed Evidential Cultures in the Search for Gravitational Waves. American Journal of Sociology, 104(2), 293-338. 
                 </li>
                 <li class="list-group-item border border-0">
-                  2.  United States Department of Agriculture, Animal and Plant Health Inspection Service. (n.d.). History of feral swine in the Americas.https://www.aphis.usda.gov/operational-wildlife-activities/feral-swine/distribution
+                  2.  United States Department of Agriculture, Animal and Plant Health Inspection Service. (n.d.). History of feral swine in the Americas. https://www.aphis.
+                  usda.gov/
+                  operational-wildlife-activities/feral-swine/distribution
                 </li>
                 <li class="list-group-item border border-0">
-                  3.United States Department of Agriculture, Southwest Climate Hub. (n.d.). Feral swine bomb. https://www.climatehubs.usda.gov/hubs/southwest/topic/feral-swine-bomb
+                  3.United States Department of Agriculture, Southwest Climate Hub. (n.d.). Feral swine bomb. https://www.climatehubs
+                  .usda.gov/
+                  hubs/southwest/topic/feral-swine-bomb
                 </li>
                 <li class="list-group-item border border-0">
-                  4.  (Massei et al., 2018), Camera traps and activity signs to estimate wild boar density and derive abundance indices. Pest. Manag. Sci, 74: 853-860. https://doi.org/10.1002/ps.4763
+                  4.  (Massei et al., 2018), Camera traps and activity signs to estimate wild boar density and derive abundance indices. Pest. Manag. Sci, 74: 853-860. https://doi.org/
+                  10.1002/ps.4763
                 </li>
                 <li class="list-group-item border border-0">
-                  5. (Hanson et al., 2008), Effect of experimental manipulation on survival and recruitment of feral pigs.  https://bpb-us-e2.wpmucdn.com/wordpress.auburn.edu/dist/0/141/files/2014/05/202009-WildRes.pdf
+                  5. (Hanson et al., 2008), Effect of experimental manipulation on survival and recruitment of feral pigs.  https://bpb-us-e2.wpmucdn.com/
+                  wordpress.auburn.edu
+                  /dist/0/141/
+                  files/2014/05/202009-WildRes.pdf
                 </li>
                 <li class="list-group-item border border-0">
-                  6. (Campbell et al., 2010), Feral Swine Behavior relative to Aerial Gunning in Southern Texas. https://digitalcommons.unl.edu/cgi/viewcontent.cgi?article=1878&context=icwdm_usdanwrc 
+                  6. (Campbell et al., 2010), Feral Swine Behavior relative to Aerial Gunning in Southern Texas. https://
+                  digitalcommons.unl.edu/cgi/
+                  viewcontent.cgi?article=1878
+                  &context=icwdm_usdanwrc 
                 </li>
                 <li class="list-group-item border border-0">
-                  7. Texas Farm Bureau. (n.d.). Controlling feral hogs. https://texasfarmbureau.org/controlling-feral-hogs/
+                  7. Texas Farm Bureau. (n.d.). Controlling feral hogs. https://texasfarmbureau.org/
+                  controlling-feral-hogs/
+
                 </li>
                 <li class="list-group-item border border-0">
-                  8. University of Georgia Extension. (2020, January). Feral hogs. "https://site.extension.uga.edu/townsandunionag/2020/01/feral-hogs/"
+                  8. University of Georgia Extension. (2020, January). Feral hogs. "https://site.extension.uga.edu/
+                  townsandunionag/
+                  2020/01/feral-hogs/"
                 </li>
                 <li class="list-group-item border border-0">
-                  9. North Palm Beach County Invasive Species. (n.d.). Feral hogs: A growing problem. https://www.npbcid.org/feral-hogs-a-growing-problem
+                  9. North Palm Beach County Invasive Species. (n.d.). Feral hogs: A growing problem. https://www.npbcid.org/
+                  feral-hogs-a-growing-problem
                 </li>
                 <li class="list-group-item border border-0">
-                  10. Arkansas Department of Agriculture. (n.d.). Feral hog population and removal data.https://agriculture.arkansas.gov/arkansas-department-of-agriculture-services/feral-hog/
+                  10. Arkansas Department of Agriculture. (n.d.). Feral hog population and removal data.https://agriculture.
+                  arkansas.gov/arkansas-department
+                  -of-agriculture-services/feral-hog/
                 </li>
                 <li class="list-group-item border border-0">
-                  11. Louisiana Wildlife and Fisheries. (n.d.). Feral Hogs https://www.wlf.louisiana.gov/page/feral-hogs#:~:text=According%20to%20a%20mail%20survey,by%20farmers%20or%20professional%20trappers.
+                  11. Louisiana Wildlife and Fisheries. (n.d.). Feral Hogs https://www.wlf.
+                  louisiana.gov/page/
+                  feral-hogs
+                  #:~:text=According%20to%
+                  20a%20mail%20survey,
+                  by%20farmers%20or%20
+                  professional%20trappers.
                 </li>
                 <li class="list-group-item border border-0">
-                  12. Oklahoma Wildlife Department. (n.d.). Feral hogs hunting information. https://www.wildlifedepartment.com/hunting/feral-hogs
+                  12. Oklahoma Wildlife Department. (n.d.). Feral hogs hunting information. https://www.wildlifedepartment
+                  .com/hunting/feral-hogs
                 </li>
                 <li class="list-group-item border border-0">
-                  13. North Carolina Department of Agriculture. (n.d.). Feral swine information. https://www.ncagr.gov/divisions/veterinary/FeralSwine/Learn
+                  13. North Carolina Department of Agriculture. (n.d.). Feral swine information. https://www.ncagr.gov/
+                  divisions/veterinary
+                  /FeralSwine/Learn
                 </li>
                 <li class="list-group-item border border-0">
-                  14. Talton, T. (2023, November 27). Feral hogs a largely unseen but costly problem in state. Coastal Review.https://coastalreview.org/2023/11/feral-hogs-a-largely-unseen-but-costly-problem-in-state/
+                  14. Talton, T. (2023, November 27). Feral hogs a largely unseen but costly problem in state. Coastal Review.https://coastalreview.org/
+                  2023/11/
+                  feral-hogs-a-largely-unseen-but-costly-problem-in-state/
                 </li>
                 <li class="list-group-item border border-0">
-                  15. Backfire. (n.d.). Best US states for hunting hogs, plus laws and seasons. https://backfire.tv/best-states-for-hog-hunting/
+                  15. Backfire. (n.d.). Best US states for hunting hogs, plus laws and seasons. https://backfire.tv/
+                  best-states-for-hog-hunting/
                 </li>
                 <li class="list-group-item border border-0">
-                  16. Captain Experiences. (n.d.). States with the biggest wild hog problem. https://captainexperiences.com/blog/states-with-biggest-wild-hog-problem
+                  16. Captain Experiences. (n.d.). States with the biggest wild hog problem. https://captainexperiences.com/
+                  blog/states-with-biggest-wild-hog-problem
                 </li>
                 <li class="list-group-item border border-0">
-                  17. Bowhunting.net. (n.d.). Number of feral hogs per state. https://bowhunting.net/2023/02/number-of-feral-hogs-per-state/
+                  17. Bowhunting.net. (n.d.). Number of feral hogs per state. https://bowhunting.net/
+                  2023/02/number-of-feral-hogs-per-state/
                 </li>
                 <li class="list-group-item border border-0">
-                  18. University of Georgia Center for Invasive Species and Ecosystem Health. (n.d.). Early Detection & Distribution Mapping System (EDDMapS). https://www.eddmaps.org/distribution/List.cfm?sub=3874
+                  18. University of Georgia Center for Invasive Species and Ecosystem Health. (n.d.). Early Detection & Distribution Mapping System (EDDMapS). https://www.eddmaps.org/
+                  distribution/List.cfm?sub=3874
                 </li>
                 
               </ul>
@@ -357,17 +404,24 @@
 
                 <ul class="list-group">
                   <li class="list-group-item border border-0">
-                    19. Farm Journal's Pork Business. (n.d.). Meet Mississippi's yawt-yawt wild pigs nightmare and hunting legend. https://www.porkbusiness.com/news/industry/meet-mississippis-yawt-yawt-wild-pigs-nightmare-and-hunting-legend-making   
+                    19. Farm Journal's Pork Business. (n.d.). Meet Mississippi's yawt-yawt wild pigs nightmare and hunting legend. https://www.porkbusiness.com
+                    /news/industry/
+                    meet-mississippis-yawt-yawt-wild-pigs
+                    -nightmare-and-hunting-legend-making   
                   </li>
                   <li class="list-group-item border border-0">
-                    20.South Carolina Department of Natural Resources. (n.d.). Wild pig information. https://www.dnr.sc.gov/wildlife/hog/index.html
+                    20.South Carolina Department of Natural Resources. (n.d.). Wild pig information. https://www.dnr.sc.gov/
+                    wildlife/hog/index.html
                   </li>
   
                   <li class="list-group-item border border-0">
-                    21. California Wildlife Agency. (n.d.). Wild pig conservation. https://wildlife.ca.gov/Conservation/Mammals/Wild-Pig
+                    21. California Wildlife Agency. (n.d.). Wild pig conservation. https://wildlife.ca.gov/
+                    Conservation/Mammals/Wild-Pig
                   </li>
                   <li class="list-group-item border border-0">
-                    22. ‘Biggest wild hog problem’ in the US? California is in the top 10 for feral pigs By Brianna Taylor. Updated November 28, 2023 9:26 AM. https://www.sacbee.com/news/california/article282384908.html
+                    22. ‘Biggest wild hog problem’ in the US? California is in the top 10 for feral pigs By Brianna Taylor. Updated November 28, 2023 9:26 AM. https://www.sacbee.com/
+                    news/california/
+                    article282384908.html
                   </li>
                 </ul>
               </div>
@@ -464,6 +518,8 @@
           ],
         },
         options: {
+        responsive: true,
+        maintainAspectRatio: false,
           indexAxis: 'y',
           scales: {
             y: {
@@ -502,6 +558,8 @@
           ],
         },
         options: {
+          responsive: true,
+          maintainAspectRatio: false,
           scales: {
             y: {
               beginAtZero: true,
