--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="favicon.png" />
 
     <title>Feral Hog Data</title>
     <link rel="stylesheet" href="style.css" />
