adjusted sizes and margins for chartJS on mobile/responsive

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </div>
       </section>
 
-      <section class="container px-5 pb-4 mx-auto">
+      <section class="container px-5 mx-auto">
         <div class="pb-2 mx-auto h2">Findings/Analysis</div>
         <p class="pb-2 mx-auto">
           The USDA's Animal and Plant Health Inspection Service (APHIS)
@@ -382,7 +382,7 @@
           presenting data across states offers a rare opportunity for direct
           comparison that is absent from most government resources.
         </p>
-        <p class="pb-2 mx-auto">
+        <p class="mx-auto">
           I was disappointed to discover that their feral hog records only
           covered July 1, 1982, through October 30, 2024, but the limitation of
           records might not be considered to be a technical failure, but as an
@@ -401,11 +401,11 @@
           for such information. [20]
         </p> -->
       </section>
-      <section class="container px-5 py-5 mx-auto">
+      <section class="container px-5 mx-auto">
         <div class="row justify-content-center">
           <div class="col-lg-6 mx-auto">
-            <div class="pb-2 mx-auto h2">Discussion</div>
-            <p class="mx-auto">
+            <div id="discussionTitle" class="mx-auto h2">Discussion</div>
+            <p class="mx-auto py-2">
               My analysis supports previous research by Campbell et al. (2010)
               and Hanson et al. (2008) who identified methodological
               inconsistencies in wildlife population monitoring. However, my
@@ -430,7 +430,7 @@
             </div>
           </div> -->
           <div>
-            <p class="mx-auto">
+            <p class="mx-auto py-4">
               The biological and behavioral characteristics of feral swine—their
               adaptability, nocturnal habits, and responses to hunting
               pressure—create inherent challenges in population estimation.
@@ -823,7 +823,7 @@
           ],
           datasets: [
             {
-              label: 'Population Estimates from References Listed Below',
+              label: 'Population Estimates from References',
               data: [
                 2600000, 400000, 500000, 500000, 1050000, 200000, 700000,
                 225000, 300000, 150000,
