Created new repository for xmlData Project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="icon" href="favicon.png" />
 
-    <title>XML</title>
+    <title>XML Data Project</title>
     <link rel="stylesheet" href="style.css" />
     <!-- <script
       type="text/javascript"
@@ -115,7 +115,7 @@
       <section class="container">
         <div class="row py-lg-5 bg-dark-subtle">
           <h1 class="fw-bold font-size:3em display-block text-center">
-            Using XML to create a comic book list to catalog my collection.
+            Using XML Data with JavaScript
           </h1>
           <div>
             <h2 class="text-center display-block pt-3 pb-5">
@@ -175,7 +175,7 @@
       </section>
 
       <section class="container px-5 pb-4 mx-auto">
-        <div class="pb-2 mx-auto h2">Comic Books</div>
+        <div class="pb-2 mx-auto h2">Books List from XML</div>
         <div id="content">
           <table id="books" cellpadding="10px" style="text-align: left">
             <thead>
