--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <hr class="pb-5" />
 
           <div class="px-5 mx-auto">
-            <div class="pb-2 mx-auto h2">Introduction</div>
+            <div><h2 class="mx-auto headline-with-line">Introduction</h2></div>
             <div>
               <p class="mx-auto">
                 XML, or Extensible Markup Language, is a markup language
@@ -175,7 +175,55 @@
       </section>
 
       <section class="container px-5 pb-4 mx-auto">
-        <div class="pb-2 mx-auto h2">Books List from XML</div>
+        <h2 class="mx-auto headline-with-line">Books List from XML</h2>
+        <!-- <div class="pb-2 mx-auto h2">Books List from XML</div> -->
+
+        <!-- =========================================== -->
+
+        <div class="wrapper1">
+          <div class="div1"></div>
+        </div>
+        <div class="wrapper2">
+          <div class="div2">
+            <div class="div2">
+              <table id="books" cellpadding="10px" style="text-align: left">
+                <thead>
+                  <tr>
+                    <th>Author</th>
+                    <th>Title</th>
+                    <th>Price</th>
+                    <th>Description</th>
+                    <th>Image</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- =========================================== -->
+        <!-- 
+        <div class="wrapper1">
+          <div class="div1"></div>
+        </div>
+        <div id="content" class="wrapper2">
+          <div class="div2">
+            <table id="books" cellpadding="10px" style="text-align: left">
+              <thead>
+                <tr>
+                  <th>Author</th>
+                  <th>Title</th>
+                  <th>Price</th>
+                  <th>Description</th>
+                  <th>Image</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div> -->
+        <!-- =========================================== -->
+        <!--     
         <div id="content">
           <table id="books" cellpadding="10px" style="text-align: left">
             <thead>
@@ -189,7 +237,7 @@
             </thead>
             <tbody></tbody>
           </table>
-        </div>
+        </div> -->
         <!-- <div id="container">
           <div align="center" class="loader">
             <img
@@ -303,5 +351,15 @@
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
+    <script>
+      $(function () {
+        $('.wrapper1').scroll(function () {
+          $('.wrapper2').scrollLeft($('.wrapper1').scrollLeft());
+        });
+        $('.wrapper2').scroll(function () {
+          $('.wrapper1').scrollLeft($('.wrapper2').scrollLeft());
+        });
+      });
+    </script>
   </body>
 </html>
