--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                 for displaying data, XML focuses on structuring and describing
                 data itself.
 
+                <!-- test -->
+
                 <!-- A specific goal was to determine if information shared
                 openly online might better contribute to the work of researchers in
                 universities that have an open evidential culture, and whether
