added a paragraph and a link to a related project.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
                 universities that have an open evidential culture, and whether
                 professional researchers might benefit from such information. -->
               </p>
+              <p class="mx-auto">
+                This site uses JavaScript, so that I could experiment with
+                different ways of presenting XML data online. So far, I prefer
+                using XML and Relational Databases like I did in an earlier
+                project:
+                https://scotcorm.github.io/cv/textProjects/courseProjectFinal/parksCompleteFinal.html
+              </p>
               <!-- <p class="mx-auto">
                 The monitoring of feral swine populations represents a
                 particularly instructive case for examining the tension between
